confs/AtweekHomePage/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homepage
  labels:
    app: homepage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homepage
  template:
    metadata:
      labels:
        app: homepage
    spec:
      containers:
        - image: ramille/homepage:arm_0.4
          name: homepage
          ports:
            - containerPort: 80
