confs/AtweekHomePage/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: homepage 
    labels:
        app: homepage
spec:
    ports:
        - port: 80 
    selector:
        app: homepage
